# saf

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp  future_example.cpp  shared_future_example.cpp
include/: saf.hpp
test/unit/: CMakeLists.txt  future_test.cpp  main.cpp  promise_test.cpp  shared_future_test.cpp
